--- a/package.json
+++ b/package.json
@@ -17,10 +17,18 @@
     "three": "^0.89.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.1.2",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-flow": "^6.18.0",
+    "babel-plugin-tcomb": "^0.3.26",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "chalk": "^2.3.0",
     "eslint-config-es2015": "^1.1.0",
     "html-webpack-harddisk-plugin": "^0.1.0",
     "html-webpack-plugin": "^2.30.1",
+    "tcomb": "^3.2.24",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   }
