--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack -p",
-    "dev": "webpack-dev-server --hot"
+    "dev": "env NODE_ENV=development webpack-dev-server --hot"
   },
   "dependencies": {
     "eslint": "^4.14.0",
@@ -14,7 +14,8 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "three": "^0.89.0"
+    "three": "^0.89.0",
+    "three-orbit-controls": "^82.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
