--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "env NODE_ENV=development webpack-dev-server --hot"
   },
   "dependencies": {
+    "cuid": "^1.3.8",
     "eslint": "^4.14.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
